--- a/prueba1.html
+++ b/prueba1.html
@@ -129,6 +129,7 @@ function empezarmalla(){
     }
  }
 
+/* También se puede agregar lienzo.lineWidth = 5; */
  function dibujarLinea(){
      lienzo.beginPath();
      lienzo.strokeStyle = colormalla;
